<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

        <ImageView
            android:id="@+id/imageViewAppLogo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="142dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTitleSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="32dp"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/titleConfirmPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="7dp"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegisterPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsername" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="7dp"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/titlePassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

        <TextView
            android:id="@+id/textViewHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="47dp"
            android:text="@string/titleHaveAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <EditText
            android:id="@+id/editTextRegisterUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="7dp"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegisterEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleSignUp" />

        <TextView
            android:id="@+id/textViewTitleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="164dp"
            android:text="@string/titleSignUp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegisterUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAppLogo2" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="157dp"
            android:width="290dp"
            android:text="@string/titleSignUp"
            app:layout_constraintBottom_toTopOf="@+id/textViewHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>