<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

            <TextView
                android:id="@+id/titleLogin_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="174dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="174dp"
                android:text="@string/titleLogin"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewAppLogo" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="59dp"
                android:width="290dp"
                android:text="@string/titleLogin"
                app:layout_constraintBottom_toTopOf="@+id/textViewNoAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="11dp"
                android:width="300dp"
                android:ems="10"
                android:hint="@string/titlePassword"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="225dp"
                android:layout_marginEnd="49dp"
                android:text="@string/titleForgotPassword"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <TextView
                android:id="@+id/textViewNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="176dp"
                android:layout_marginBottom="70dp"
                android:text="@string/titleNoAccount"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <ImageView
                android:id="@+id/imageViewAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="142dp"
                app:layout_constraintBottom_toTopOf="@+id/titleLogin_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>


