<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentDetection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="30dp"
            android:text="@string/titleUploadImage"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/skinCancerImage"
            app:layout_constraintEnd_toStartOf="@+id/btnOpenCamera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnOpenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="30dp"
            android:text="@string/titleUseCamera"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/skinCancerImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnUploadImage"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="155dp"
            android:width="250dp"
            android:text="@string/titleDetectBtn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skinCancerImage" />

        <ImageView
            android:id="@+id/skinCancerImage"
            android:layout_width="277dp"
            android:layout_height="277dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUploadImage" />

        <TextView
            android:id="@+id/titleResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="132dp"
            android:text="Result:"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDetect" />

        <TextView
            android:id="@+id/outputResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="132dp"
            android:textColor="#F43C2E"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDetect" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>